added styles, links and finalized html code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
-  <div id="link">Download Excursion (Coming soon!)</div>
+  <div class="link"><a href="downloadapp">Download Excursion (Coming soon!)</a></div>
+  <video src="./resources/video/excursion.mp4" width="404" height="720" autoplay="true"> Video not supported </video>
+  <h2>Your personal travel guide</h2>
+
+  <p>Excursion remembers places you link, and recommends new points of interest around you.</p>
+  <img src="./resources/images/camp.jpg" alt="Campsite Image"/><br /><br/>
+  <img src="./resources/images/phone.png" alt="iPhone"/>
+  <h2>Coming soon for iPhone and Android</h2>
+    <div class="link"><a href="downloadapp">Download Excursion (Coming soon!)</a></div>
+    <div id="footer">&copy; Excursion</div>
 </body>
 </html>
